examples/mongodb/mongo-express-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-express-deploy
  labels:
    app: mongodb-express
  namespace: mongodb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongodb-express
  template:
    metadata:
      labels:
        app: mongodb-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-express-service
  namespace: mongodb
spec:
  selector:
    app: mongodb-express
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 31000
