examples/mongodb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "myapp.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              serviceName: hello-server
              servicePort: 8000
